@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <CIM CIMVERSION="2.0" DTDVERSION="2.0">
 <MESSAGE ID="4711" PROTOCOLVERSION="1.0"><SIMPLEREQ><IMETHODCALL NAME="DeleteInstance"><LOCALNAMESPACEPATH><NAMESPACE NAME="root"></NAMESPACE><NAMESPACE NAME="interop"></NAMESPACE></LOCALNAMESPACEPATH>
-<IPARAMVALUE NAME="InstanceName"><INSTANCENAME CLASSNAME="CIM_ListenerDestinationCIMXML"><KEYBINDING NAME="creationclassname"><KEYVALUE VALUETYPE="string">CIM_ListenerDestination</KEYVALUE></KEYBINDING><KEYBINDING NAME="name"><KEYVALUE VALUETYPE="string">TestSuite_SAE_LD</KEYVALUE></KEYBINDING><KEYBINDING NAME="systemcreationclassname"><KEYVALUE VALUETYPE="string">CIM_ComputerSystem</KEYVALUE></KEYBINDING><KEYBINDING NAME="systemname"><KEYVALUE VALUETYPE="string">localhost</KEYVALUE></KEYBINDING></INSTANCENAME></IPARAMVALUE>
+<IPARAMVALUE NAME="InstanceName"><INSTANCENAME CLASSNAME="CIM_ListenerDestinationCIMXML"><KEYBINDING NAME="creationclassname"><KEYVALUE VALUETYPE="string">CIM_ListenerDestinationCIMXML</KEYVALUE></KEYBINDING><KEYBINDING NAME="name"><KEYVALUE VALUETYPE="string">TestSuite_SAE_LD</KEYVALUE></KEYBINDING><KEYBINDING NAME="systemcreationclassname"><KEYVALUE VALUETYPE="string">CIM_ComputerSystem</KEYVALUE></KEYBINDING><KEYBINDING NAME="systemname"><KEYVALUE VALUETYPE="string">localhost</KEYVALUE></KEYBINDING></INSTANCENAME></IPARAMVALUE>
 </IMETHODCALL></SIMPLEREQ>
 </MESSAGE></CIM>
